# trabajo_homer

Desktop/subastas/: app.py  package-lock.json
Desktop/subastas/static/css/: admin.css  style.css
Desktop/subastas/templates/: admin.html  creation_subastas.html  diseño.css  index.html  live.html  login.html  perfil.html  perfil_admin.html  styles.css
comunicacion_x-plane/: CMakeLists.txt  connect_xplane.cpp  connect_xplane.h  dataprocessor.cpp  dataprocessor.h  ip_connect_xplane.cpp  ip_connect_xplane.h  ip_xplane.cpp  ip_xplane.h  main.cpp  xplanemanager.cpp  xplanemanager.h
comunicacion_x-plane/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
